--- a/misc/style.css
+++ b/misc/style.css
@@ -1,25 +1,17 @@
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+	text-align: center;
   font-family: 'Avenir LT Std';
-}
-
-body {
-  height: 100vh;
-  background-color: #f8f8f8;
-  display: grid;
-  place-items: center;
 }
 
 .card {
   display: flex;
   flex-direction: column;
-  width: 400px;
-  height: 600px;
-  background-color: white;
   border-radius: 20px;
-  padding: 50px;
+  padding: 20px;
 }
 
 .chinese {
@@ -35,19 +27,18 @@ h1 {
 h2 {
   font-weight: 500;
   font-size: 16px;
-  color: rgba(0, 0, 0, 0.6);
+  margin-bottom: 44px;
 }
 
 .divider {
   width: 100%;
   height: 1px;
-  background-color: rgba(0, 0, 0, 0.2);
-  margin-top: 44px;
+  background-color: #000;
+  opacity: 0.2;
   margin-bottom: 14px;
 }
 
-.type {
-  color: rgba(0, 0, 0, 0.2);
+.tags {
   font-size: 12px;
   font-weight: 900;
   text-transform: uppercase;
@@ -83,7 +74,6 @@ ol li {
 
 .example {
   display: flex;
-  color: #5a73b4;
   margin-bottom: 14px;
 }
 
@@ -91,7 +81,6 @@ ol li {
   width: 6px;
   height: 6px;
   border-radius: 3px;
-  background-color: #5a73b4;
   margin-top: 8px;
   margin-right: 10px;
 }
